tests/integration/snapshots/integration__snapshot__insecure_commands.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"insecure-commands.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
error[insecure-commands]: execution of insecure workflow commands is enabled
  --> @@INPUT@@:10:5
   |
10 | /     env:
11 | |       ACTIONS_ALLOW_UNSECURE_COMMANDS: yes
   | |__________________________________________^ insecure commands enabled here
   |
   = note: audit confidence → High

error[insecure-commands]: execution of insecure workflow commands is enabled
  --> @@INPUT@@:24:9
   |
24 |         env: ${{ matrix.env }}
   |         ^^^^^^^^^^^^^^^^^^^^^^ non-static environment may contain ACTIONS_ALLOW_UNSECURE_COMMANDS
   |
   = note: audit confidence → Low

2 findings: 0 unknown, 0 informational, 0 low, 0 medium, 2 high
